--- a/mss.bib
+++ b/mss.bib
@@ -349,7 +349,7 @@ urldate = {2024-03-10}
 }
 
 @online{UrbitBreach,
-author = "Tlon Corporation",
+author = "{Tlon Corporation}",
 title = "The Last Network Breach",
 year = 2020,
 url = "https://roadmap.urbit.org/project/last-network-breach",
@@ -432,4 +432,25 @@ year = 2018,
 number = "\ssc{ucb}/\ssc{eecs}-2018-51",
 url = "https://www2.eecs.berkeley.edu/Pubs/TechRpts/2018/EECS-2018-51.pdf",
 urldate = {2024-03-10}
+}
+
+@InCollection{SEPPythagoras,
+	author       =	{Huffman, Carl},
+	title        =	{{Pythagoras}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta and Uri Nodelman},
+	howpublished =	{\url{https://plato.stanford.edu/archives/spr2024/entries/pythagoras/}},
+	year         =	{2024},
+	edition      =	{{S}pring 2024},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
+@article{Afonin2024,
+author = "K. Afonin \patp{dozreg-toplud}",
+title = "\texttt{urwasm}:  A {WebAssembly} Backend for {Urbit}",
+journal = "Urbit Systems Technical Journal",
+year = 2024,
+volume = 1,
+number = 1,
+pages = "133--150"
 }
