--- a/mss.bib
+++ b/mss.bib
@@ -447,7 +447,7 @@ urldate = {2024-03-10}
 
 @article{Afonin2024,
 author = "K. Afonin \patp{dozreg-toplud}",
-title = "\texttt{urwasm}:  A {WebAssembly} Backend for {Urbit}",
+title = {The \texttt{urwasm} {WebAssembly} Interpreter Suite on {Urbit}},
 journal = "Urbit Systems Technical Journal",
 year = 2024,
 volume = 1,
