--- a/mss.bib
+++ b/mss.bib
@@ -10,12 +10,12 @@ urldate = {2024-03-10}
 }
 
 @book{Apple1994,
-author = "Kenneth R. Beesley and Dirk Elzinga",
+author = "Apple Computer, Inc.",
 title = "Inside Macintosh:  PowerPC System Software",
 publisher = "Addison-Wesley",
 address = "Boston",
 year = 1994,
-url = "https://developer.apple.com/library/archive/documentation/mac/pdf/PPC\_System\_Software/Intro\_to\_PowerPC.pdf",
+url = "https://developer.apple.com/library/archive/documentation/mac/pdf/PPC_System_Software/Intro_to_PowerPC.pdf",
 urldate = {2024-03-10}
 }
 
@@ -31,7 +31,7 @@ pages = "11--23",
 @software{Cerlane2018,
 author = "Leong Cerlane",
 title = "SoftPosit",
-note = "Git repository",
+howpublished = "Git repository",
 year = 2018,
 url = "https://gitlab.com/cerlane/SoftPosit",
 urldate = {2024-03-10}
@@ -41,12 +41,12 @@ urldate = {2024-03-10}
 author="Chohra, Chemseddine
 and Langlois, Philippe
 and Parello, David",
-editor="Marco Nehmeier and J{\"u}rgen Wolff von Gudenberg and Warwick Tucker",
+editor="Marco Nehmeier and J{\"u}rgen {Wolff von Gudenberg} and Warwick Tucker",
 title="Efficiency of Reproducible Level 1 {\sc blas}",
 booktitle="Scientific Computing, Computer Arithmetic, and Validated Numerics",
 year="2016",
 publisher="Springer International Publishing",
-address="Cham",
+address="Berlin",
 pages="99--108",
 }
 
@@ -60,8 +60,9 @@ pages = "252--261",
 
 % https://en.cppreference.com/w/c/numeric/fenv
 @online{CPPRef,
+author = {{C++ Reference}},
 title = "Floating-point environment",
-journal = "C++ Reference",
+%howpublished = "C++ Reference",
 year = 2023,
 url = "https://en.cppreference.com/w/c/numeric/fenv",
 urldate = {2024-03-10}
@@ -70,7 +71,7 @@ urldate = {2024-03-10}
 @online{Dawson2013,
 author = "Bruce Dawson",
 title = "Floating-Point Determinism",
-journal = "Random {\ssc{ascii}}",
+howpublished = "Random {\ssc{ascii}} – tech blog of Bruce Dawson",
 year = 2013,
 url = "https://randomascii.wordpress.com/2013/07/16/floating-point-determinism/",
 urldate = {2024-03-10}
@@ -242,8 +243,8 @@ urldate = {2024-03-10}
 
 @online{Kharva2020,
 author = "Paresh Kharva",
-title = "{TensorFloat-32} in the {A100} {{\sc gpu}} Accelerates {AI} Training, {\it {\sc hpc}} up to 20x",
-journal = "{\ssc{nvidia}} Developer Blog",
+title = "{TensorFloat-32} in the {A100} {{\sc gpu}} Accelerates {AI} Training, {\it {\sc hpc}} up to 20×",
+institution = "{\ssc{nvidia}} Developer Blog",
 year = 2020,
 url = "https://blogs.nvidia.com/blog/2020/05/14/tensorfloat-32-precision-format/",
 urldate = {2024-03-10}
@@ -329,7 +330,7 @@ pages = "50--51",
 }
 
 @inproceedings{Steele1991,
-author = "Guy L. Steele Jr. and Jon L. White",
+author = "Steele, Jr., Guy L. and Jon L. White",
 title = "How to print floating-point numbers accurately",
 booktitle = "Proceedings of the 1990 \ssc{acm} \ssc{sigplan} Conference on Programming Language Design and Implementation (\ssc{pldi} '90)",
 year = 1991,
@@ -344,7 +345,7 @@ title = "Extended-Precision Floating-Point Numbers for {{\sc gpu}} Computation",
 institution = "The University of North Carolina at Chapel Hill",
 year = 2007,
 number = "{\sc cim}-007-01",
-url = "http://andrewthall.org/papers/df64\_qf128.pdf",
+url = "http://andrewthall.org/papers/df64_qf128.pdf",
 urldate = {2024-03-10}
 }
 
@@ -359,13 +360,13 @@ urldate = {2024-03-10}
 @software{UrbitEpoch,
 author = "Matthew Levan \patp{mastyr-bottec}",
 title = "Epoch System",
-year = 2020,
+year = 2023,
 url = "https://roadmap.urbit.org/project/epoch-system",
 urldate = {2024-03-10}
 }
 
 @software{Urbit,
-author = "Urbit Foundation",
+author = {{Urbit Foundation}},
 title = "Urbit",
 year = 2023,
 note = "Git repository",
@@ -418,7 +419,7 @@ pages = "1--5",
 
 @inproceedings{vanDam2019,
 author = "Laurens {van Dam} and Johan Peltenburg and Zaid Al-Ars and H. Peter Hofstee",
-title = "An Accelerator for Posit Arithmetic Targeting Posit {Level 1} \ssc{blas} Routines and Pair-\ssc{hmm}",
+title = "An Accelerator for Posit Arithmetic Targeting Posit {Level 1} {\sc blas} Routines and Pair-{\sc hmm}",
 booktitle = "Proceedings of the Conference for Next Generation Arithmetic",
 year = 2019,
 pages = "1--10",
