--- a/mss.tex
+++ b/mss.tex
@@ -137,7 +137,7 @@ The machine epsilon, or smallest value discernable from 1.0, is determined by th
 
 \paragraph{Sequence ordering.}
 
-In situations in which floating-point operations may occur in different orders, even the basic guarantee of communitativity breaks.  For instance, in 64-bit floating point arithmetic, the following holds true (example in Python):
+In situations in which floating-point operations may occur in different orders, even the basic guarantee of commutativity breaks.  For instance, in 64-bit floating point arithmetic, the following holds true (example in Python):
 
 \lstset{language=Python}
 \begin{lstlisting}[style=listingcode_python]
